Fix spacing in DOW control.

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -599,6 +599,7 @@
                             .components-base-control__field .components-h-stack {
                                 display: flex;
                                 flex-direction: column;
+                                gap: 4px;
                                 margin-bottom: 0;
             
                                 .components-checkbox-control__input-container {
